--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
   </head>
   <body>
-    Hello <strong>World</strong>!
-    <script src="./script.js"></script>
+    <button id="omikuji-button" type="button">おみくじを引く</button>
+    <div id="result"></div><script src="./script.js"></script>
   </body>
 </html>
